<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_restorani"
            android:icon="@drawable/ic_restaurants"
            android:title="@string/Restorani" />
        <item
            android:id="@+id/nav_rezervacije"
            android:icon="@drawable/ic_reservation"
            android:title="@string/Rezervacije" />
        <item
            android:id="@+id/nav_korisnickiProfil"
            android:icon="@drawable/ic_user_profile"
            android:title="@string/KorisnickiProfil" />
        <item
            android:id="@+id/nav_pomoc"
            android:icon="@drawable/ic_help"
            android:title="@string/Pomoc" />

    <item
        android:id="@+id/nav_odjava"
        android:icon="@drawable/ic_logut"
        android:title="@string/Odjava" />
</group>
</menu>